# triton_cpu

./: .gitignore  CMakeLists.txt  README.md  build.sh  ds.c  help.txt  main.py
.github/workflows/: actions.yml  llvm-build.yml
arm_llv/: install.sh
examples/: add_kernel.py
extras/: 1 - tiled matmul.ipynb  float_test  gemm_gpu.mlir  high  main.cpp  ops.md  tt.py  your_file.ll
extras/kernels/: basic.llir  dot copy.mlir  dot.mlir  dots.mlir  gen.mlir  generic.mlir  input_to_pass.mlir  kernel-05-layer-norm-fwd copy.mlir  kernel-05-layer-norm-fwd.mlir  kernel-05-layer-norm-fwd_opt.mlir  layer.mlir  ll.mlir  llit.llir  mat.mlir  matmul-loops.mlir  matmul.mlir  opt_kernel-05-layer-norm-fwd.mlir  opt_sme_add.mlir  opt_sve_matmul.mlir  opt_tutorial.mlir  part.mlir  pre.mlir  pre_outer copy 2.mlir  pre_outer.mlir  prefetch.cpp  prefetch.mlir  proccessed.mlir  progress.mlir  reduces.mlir  sme.mlir  sme_add.mlir  sme_matmul copy.mlir  sme_matmul.mlir  sve_matmul.mlir  tmp.mlir  tutorial.mlir
extras/matmul_sve/: Dockerfile  __grp__matmul_kernel.json  matmul_kernel.json  (+2 more)
git/: HEAD  config  index  packed-refs
my_docs/: arm_sve.md  isa.md
notes/: llm.cpp  llmarm.cpp  llmbackup.cpp
python/: add_kernel.py  build.sh  cap.py  dcmd.py  dia.xml  kernel.s  log.txt  matmul.mlir  matmul.py  matmul_local.mlir  matmul_sme.mlir  opt_mlir.py  oth.llir  output.mlir  process_mlir.py  run.sh  runner.py  setup.py  some.txt  test_matmul.py
tools/: CMakeLists.txt
tools/triton-shared-x86/: CMakeLists.txt  RegisterTritonSharedDialects.h  triton-shared-x86.cpp
unittest/: CMakeLists.txt
(+144 files in other folders)
